2008-03-27  Bill Denney  <bill@denney.ws>

	* geometry/rectint.m: Vectorize and add more tests.

2008-03-27  John W. Eaton  <jwe@octave.org>

	* plot/__axis_label__.m: Use name of caller in error message.

2008-03-27  David Bateman  <dbateman@free.fr>

	* linear-algebra/planerot.m: Givens rotation function.

2008-03-26  John W. Eaton  <jwe@octave.org>

	* set/ismember.m: Set size of idx output correctly for empty args.
	New tests.

	* general/logical.m: Correctly handle empty args.  New tests.

	* control/hinf/h2syn.m, general/__splinen__.m, general/gradient.m,
	geometry/inpolygon.m, geometry/trimesh.m, geometry/triplot.m,
	image/imagesc.m, io/csvread.m, io/csvwrite.m,
	miscellaneous/edit.m, miscellaneous/tempname.m, plot/fill.m,
	plot/patch.m, plot/ribbon.m, plot/surface.m, polynomial/mkpp.m,
	polynomial/pchip.m, polynomial/spline.m, set/unique.m:
	Texinfo fixes.

2008-03-26  Jaroslav Hajek <highegg@gmail.com>

	* linear-algebra/dmult.m: Handle scaling along arbitrary dimension.

2008-03-26  Soren Hauberg  <hauberg@gmail.com>

	* polynomial/convn.m: New tests.

2008-03-20  Ben Abbott <bpabbott@mac.com>

	* statistics/base/statistics.m: Calculate median and quantiles in
	a manner consistent with method #7 used by GNU R.
	* statistics/base/__quantile__.m, statistics/base/quantile.m,
	statistics/base/prctile.m: New functions.
	* statistics/base/Makefile.in (SOURCES): Add them to the list.
 
2008-03-25  Soren Hauberg  <hauberg@gmail.com>

	* polynomial/convn.m: New function.
	* polynomial/Makefile.in (SOURCES): Add it to the list.

2008-03-25  David Bateman  <dbateman@free.fr>

	* image/contrast.m: New function.
	* image/Makefile.in (SOURCES): Add it to the list.
	
2008-03-24  Thomas Weber  <thomas.weber.mail@gmail.com>

	* pkg/pkg.m: Allow installation of already extracted packages.

2008-03-24  David Bateman  <dbateman@free.fr>

	* general/idivide.m: New function.
	* general/Makefile.in (SOURCES): Add it to the list.

	* miscellaneous/namelengthmax.m: New function.